# capuchin

./: .gitignore  Cargo.toml  README.md  buf.yaml  build.rs  go.mod  go.sum  main.go  makefile
cluster/: cluster.go  cluster_test.go
cmd/: grpc.go  query.go  root.go  start.go
conf/: config.go
csv/: headers.go
dates/: format.go
grpc/: server.go
http/: server.go
ingest/: adapter.go  file.go  ingest.go  s3.go
internal/etcd/: connection.go  connection_test.go
kv/: .gitignore  kv.go  kv_test.go
loader/: file_loader.go  file_loader_test.go  loader.go  loader_test.go  sharder.go  sharder_test.go
loader/test-data/: output-data.csv  raw-data.csv
nodes/: README.md
nodes/data/: data.go
proto/: capuchin.proto  leader.proto
query/: query.go  query_test.go  sql_parser.go  sql_parser_test.go  test-data.csv
source/: file.go  file_path.go  s3.go
src/echo/: echo.rs
src/node/: client.rs  node.rs
src/node/leader/: leader.rs  leader_grpc.rs  mod.rs
src/node/source/: s3.rs
src/node/sync/: sync.rs
test-data/: 20190101_20190201.csv  20190201_20190301.csv  20190301_20190401.csv
