[package]
name = "capuchin"
version = "0.1.0"
authors = ["Ewan Valentine <ewan.valentine89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = "1.0.0"
arrow = "1.0.0"
tokio = {version="0.2.18",features = ["stream", "macros"]}
futures = "0.3"
bytes = "0.5.6"
grpc            = "~0.8"
protobuf        = "~2"
grpc-protobuf = "0.8.1"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
rusoto_credential = "0.45.0"
csv = "1.1.3"
toml = "0.5.6"

[build-dependencies]
protoc-rust-grpc = "~0.8"

[[bin]]
name = "node"
path = "src/node/node.rs"

[[bin]]
name = "echo"
path = "src/echo/echo.rs"

[[bin]]
name = "client"
path = "src/node/client.rs"

[[bin]]
name = "sync"
path = "src/sync/lib.rs"
